# beatbox-trainer

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_METRICS_REPORT.md  ERROR_HANDLING_ANALYSIS.md  README.md  UAT_READINESS_REPORT.md  UAT_READINESS_SUMMARY.md  UAT_TEST_SCENARIOS.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: android-build.yml
.serena/: project.yml
.serena/memories/: ARCHITECTURAL_PATTERNS_ANALYSIS.md  TESTABILITY_BLOCKERS_ANALYSIS.md  code_quality_audit_findings.md  post_refactoring_quality_audit.md
.spec-workflow/monitor/: state.json
.spec-workflow/steering/: product.md  structure.md  tech.md  ultra-speed-rust-dart-win-linux-android.md
android/app/: build.gradle.kts  proguard-rules.pro
assets/: onset_config.json
docs/: ANDROID_BUILD.md  ARCHITECTURE.md  AUDIO_PIPELINE.md  PERFORMANCE_VALIDATION.md  README.md  TESTING.md  integration_test_report.md  search.md
docs/api/: diagnostics-http.md
docs/architecture/: ARCHITECTURE.md  VISUALIZATION.md  bridge_contracts.md  controllers.md  dependency_injection.md  managers.md
docs/release/: uat_release_checklist.md
docs/research/: FUNDSP_ANALYSIS.md  GPU_TEXTURE_SHARING.md  ZERO_COPY_PLAN.md  dev-exp.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/coverage/: COVERAGE_REPORT.md
rust/coverage/rust/: lcov.info
rust/fixtures/: basic_hits.expect.json  basic_hits_incorrect.expect.json  catalog.json
rust/src/: api.rs  bridge_generated.rs  config.rs  context.rs  error.rs  lib.rs
rust/src/analysis/: classifier.rs  classifier_tests.rs  features.rs  level_crossing.rs  mod.rs  onset.rs  quantizer.rs  tests.rs
rust/src/analysis/features/: fft.rs  mod.rs  spectral.rs  temporal.rs  types.rs
rust/src/api/: diagnostics.rs  streams.rs  tests.rs  types.rs
rust/src/audio/: buffer_pool.rs  callback.rs  engine.rs  engine_cpal.rs  metronome.rs  mod.rs  stubs.rs
rust/src/audio/engine/: tests.rs
rust/src/calibration/: mod.rs  procedure.rs  procedure_adaptive_tests.rs  procedure_backoff.rs  procedure_factory.rs  procedure_manual_accept.rs  procedure_tests.rs  progress.rs  state.rs  validation.rs
rust/src/debug/: http.rs  mod.rs  pipeline_tracer.rs
rust/src/debug/routes/: handlers.rs  metrics.rs  mod.rs  state.rs  tests.rs
rust/src/engine/: core.rs  core_subscriptions.rs  mod.rs
rust/src/engine/backend/: cpal.rs  desktop_stub.rs  mod.rs  oboe.rs
rust/src/engine/core/: tests.rs
rust/src/error/: audio.rs  calibration.rs  mod.rs
rust/src/fixtures/: mod.rs
rust/src/http/: mod.rs  routes.rs  sse.rs
rust/src/managers/: audio_engine_manager.rs  broadcast_manager.rs  calibration_manager.rs  mod.rs
rust/src/telemetry/: events.rs  mod.rs
rust/src/testing/: fixture_engine.rs  fixture_manifest.rs  fixture_validation.rs  fixtures.rs  mod.rs  pipeline_integration.rs
rust/src/testing/fixture_manifest/: tests.rs
rust/src/testing/fixtures/: tests.rs
rust/tests/: bbt_diag_cli.rs  calibration_integration_test.rs  cli_fixtures.rs  integration_test.rs
rust/{{scenarioDir}}/metrics/: default-smoke.json
scripts/: coverage.sh  dev-cleanup.sh  full-build.sh  pre-commit  verify_metrics.py
test/: mocks.dart  widget_test.dart
tools/: check_code_metrics.py  performance_validation.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+437 files in other folders)
