[package]
name = "beatbox_trainer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Lock-free SPSC queue for real-time audio communication
rtrb = "0.3"

# FFT for spectral analysis
rustfft = "6"

# Logging
log = "0.4"

# Async runtime for Dart streams
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
tokio-stream = "0.1"
futures = "0.3"

# Random number generation for metronome clicks
rand = "0.8"

# Lazy static initialization
once_cell = "1.19"

# Flutter Rust Bridge for FFI
flutter_rust_bridge = "2"

# Anyhow for error handling
anyhow = "1"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
# Audio I/O via Oboe (C++ library)
oboe = { version = "0.6", features = ["java-interface"] }

# JNI bindings for Android integration
jni = "0.21"

# Android context initialization for Oboe
ndk-context = "0.1"

# Android logging
android_logger = "0.14"

# Non-Android dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[dev-dependencies]
# Test coverage reporting
# Note: cargo-llvm-cov must be installed: cargo install cargo-llvm-cov

[build-dependencies]
flutter_rust_bridge_codegen = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
