[package]
name = "beatbox_trainer"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_http = ["axum", "tower"]
diagnostics_fixtures = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Lock-free SPSC queue for real-time audio communication
rtrb = "0.3"

# FFT for spectral analysis
rustfft = "6"

# Logging
log = "0.4"

# Async runtime for Dart streams
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
cfg-if = "1"

# Random number generation for metronome clicks
rand = "0.8"

# Lazy static initialization
once_cell = "1.19"

# Flutter Rust Bridge for FFI
flutter_rust_bridge = "=2.11.1"

# Anyhow for error handling
anyhow = "1"

# Serialization/deserialization for calibration persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
axum = { version = "0.7", optional = true, features = ["macros", "http1", "tokio"] }
tower = { version = "0.4", optional = true, features = ["timeout", "util"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
# Audio I/O via Oboe (C++ library)
oboe = { version = "0.6", features = ["java-interface"] }

# JNI bindings for Android integration
jni = "0.21"

# Android context initialization for Oboe
ndk-context = "0.1"

# Android logging
android_logger = "0.14"

# Non-Android dependencies (Linux/macOS/Windows)
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
# Cross-platform audio I/O for desktop
cpal = "0.15"

[dev-dependencies]
# Test coverage reporting
# Note: cargo-llvm-cov must be installed: cargo install cargo-llvm-cov

[build-dependencies]
flutter_rust_bridge_codegen = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
